@@ -887,6 +887,31 @@ field in the ``movies`` collection for text that contains the word "Future":
 Learn more about the builders from the
 `search package API documentation <{+core-api+}/client/model/search/package-summary.html>`__.
 
+.. _kotlin-cr-atlas-search-stage:
+
+Search Operator Methods
+~~~~~~~~~~~~~~~~~~~~~~~
+
+.. sharedinclude:: dbx/jvm/atlas-search-operator-helpers.rst
+
+   .. replacement:: as-idx-link
+
+      the :ref:`kotlin-search-indexes` section of the Indexes guide
+
+   .. replacement:: atlas-query-operators-example
+
+      .. io-code-block::
+
+         .. input:: /examples/generated/AggregatesBuilderTest.snippet.atlas-search-pipeline.kt
+            :language: kotlin
+
+         .. output::
+            :language: console
+            :visible: false
+
+            Results(title=Love at First Bite, year=1979, genres=[Comedy, Romance])
+            Results(title=Love Affair, year=1994, genres=[Comedy, Drama])
+
 Atlas Search Metadata
 ---------------------
 
