@@ -53,6 +53,11 @@ and features:
       the `SearchOperator <{+core-api+}/client/model/search/SearchOperator.html>`__
       interface API documentation
 
+   .. replacement:: atlas-query-operators
+
+      the :ref:`kotlin-cr-atlas-search-stage` section of the Aggregates
+      Builders guide
+
 .. _kotlin-coroutine-version-5.3:
 
 What's New in 5.3
